--- a/src/index.html
+++ b/src/index.html
@@ -53,8 +53,8 @@
     </button> -->
 
     
-    <script src="index.js" type="module"></script>
-    <!-- <script src="/src/JS-traning/01-fetch-api.js" type="module"></script> -->
+    <!-- <script src="index.js" type="module"></script> -->
+    <script src="/src/JS-traning/01-fetch-api.js" type="module"></script>
     
   </body>
 </html>
